--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<!-- START Motion Chat Script --> 
-    <script src="https://oltpsys.com:443/api/chat/websites/7/snippet?token=XYoiMEX3uHUuSy9UwVFnxGRhxLcOw4O3"></script> 
-<!-- START Motion Chat Script -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="style.css" rel="stylesheet" />
+    <!-- START Motion Chat Script -->
+    <script src="https://oltpsys.com:443/api/chat/websites/7/snippet?token=XYoiMEX3uHUuSy9UwVFnxGRhxLcOw4O3"></script>
+    <!-- START Motion Chat Script -->
+</head>
+
+<body>
+</body>
+
+</html>
