--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Xcally Chat!</title>
     <link href="style.css" rel="stylesheet" />
     <!-- START Motion Chat Script -->
     <script src="https://oltpsys.com:443/api/chat/websites/7/snippet?token=XYoiMEX3uHUuSy9UwVFnxGRhxLcOw4O3"></script>
