working integration with Xcally server, with automatic interaction close whenever the user closes the chat window, or the tab. Receives responses and is capable of sending messages to the Xcally server.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Xcally Chat!</title>
     <link rel="stylesheet" href="chat_window_style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
 </head>
 
 <body>
