--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="chat-area"></div>
                 <div class="input-area">
                     <input type="text" class="input-area-text" placeholder="Escribe tu pregunta" id="cht-wndw-txt-ntr"
-                        onfocus="moveSubmitRight();" onblur="moveSubmitLeft();" />
+                        onfocus="moveSubmitUp();" onblur="moveSubmitDown();" />
                     <button class="input-area-submit" id="cht-wndw-sbmt">
                         <i class="material-icons send-icon"> send </i>
                     </button>
