--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="start-button-text">Chatea con nosotros</p>
             </div>
             <div class="start-button-image-container">
-                <img src="https://i.imgur.com/yuwie2Z.jpeg" class="start-button-image" />
+                <img src="open_chat_image.jpg" class="start-button-image" />
             </div>
         </div>
         <div class="chat-popup">
