fixed server connection error, changed agent avatar, fixed chat start error (wouldn't clear the chat window)

--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
             <div class="super-chat-area">
                 <div class="chat-cover">
                     <div id="chat-cover-message">
-                        <button class="close-button" id="chat-cover-message-button-close">
-                            <i class="material-icons close-button-icon"> close </i>
-                        </button>
-                        <span>Estimado cliente, actualmente nuestros servicio de atención no en línea, por favor,
+                        <span>Estimado cliente, actualmente nuestros servicios de atención no en línea, por favor,
                             intente más tarde</span>
                     </div>
                     <div class="chat-cover-form">
